@@ -18,6 +18,7 @@
     RDoc::Parser::Ruby#parse_meta_attr.
   * Clean up circular require warnings on 1.9.
   * Fix crossrefs on paths with '-'.  Ruby Bug #883.
+  * Fix ruby parser for alias with = in the name.  Bug #27522.
 
 === 2.4.3 / 2009-04-01
 
